--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons|Roboto:300,400,500" rel="stylesheet">
+  <script src="https://checkout.stripe.com/checkout.js"></script>
 </head>
 <body>
   <app-root></app-root>
